outputs_20260331-211012-d2135dce/codegen/production/build_logs/compiler_stderr.log
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_oz0ldrev\src\egtm_atom_3_phase_inverter_pwm.c: In function 'interruptEgtmAtom':
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_oz0ldrev\src\egtm_atom_3_phase_inverter_pwm.c:33:33: error: 'MODULE_P03' undeclared (first use in this function); did you mean 'MODULE_P20'?
   33 | #define LED                    &MODULE_P03, 9
      |                                 ^~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_oz0ldrev\src\egtm_atom_3_phase_inverter_pwm.c:66:23: note: in expansion of macro 'LED'
   66 |     IfxPort_togglePin(LED);
      |                       ^~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_oz0ldrev\src\egtm_atom_3_phase_inverter_pwm.c:33:33: note: each undeclared identifier is reported only once for each function it appears in
   33 | #define LED                    &MODULE_P03, 9
      |                                 ^~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_oz0ldrev\src\egtm_atom_3_phase_inverter_pwm.c:66:23: note: in expansion of macro 'LED'
   66 |     IfxPort_togglePin(LED);
      |                       ^~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_oz0ldrev\src\egtm_atom_3_phase_inverter_pwm.c: In function 'initEgtmAtom3phInv':
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_oz0ldrev\src\egtm_atom_3_phase_inverter_pwm.c:33:33: error: 'MODULE_P03' undeclared (first use in this function); did you mean 'MODULE_P20'?
   33 | #define LED                    &MODULE_P03, 9
      |                                 ^~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_oz0ldrev\src\egtm_atom_3_phase_inverter_pwm.c:203:30: note: in expansion of macro 'LED'
  203 |     IfxPort_setPinModeOutput(LED, IfxPort_OutputMode_pushPull, IfxPort_OutputIdx_general);
      |                              ^~~
